--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,12 @@
-/*.form-group{
-  padding: 10px;
-  border: solid 1px #fff;
-  box-shadow: inset 1px 1px 2px 0 #707070;
-  transition: box-shadow 0.3s;
-}*/
+
 table, td, th {
     border: 1px solid #ddd;
     text-align: left;
 }
 
 table {
-    border-collapse: collapse;
-    width: 100%;
+    width: 125%;
+    margin: 22px -94px
 
 }
 
@@ -28,6 +23,7 @@ input {
   margin: 8px 0;
   box-sizing: border-box;
   border: 1px solid black;
+  border-width: 2px;
 }
 .btn-default {
   border-radius: 8px;
@@ -37,8 +33,36 @@ input {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    margin: 22px 205px 29px;
 }
 label {
   color: blue;
   font-size: 16px;
+  margin: 0px 22px;
+  font-weight: bold;
+}
+
+.valid-input{
+  border-color: green
+}
+.invalid-input{
+  border-color: red
+}
+#valid-button{
+  background-color: green;
+  color: white;
+}
+#invalid-button{
+  background-color: red;
+  color: white;
+}
+#name {
+  color: blue
+}
+body{
+  background-color: #aab6ea;
+  margin: 33px 350px;
+}
+h1{
+  margin: 22px 170px;
 }
