create function update in db.utils, create route for update, add new form for update, add functions for update data in data base

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,3 +66,15 @@ body{
 h1{
   margin: 22px 170px;
 }
+
+table button{
+  margin-right: 10px;
+}
+.update-from .btn-default{
+  display: inline-block;
+  margin: 0;
+  margin-right: 10px;
+}
+.update-from .btn-default:first-of-type{
+  margin-left: 110px;
+}
